--- a/DakManagementSystemUI/App.xaml
+++ b/DakManagementSystemUI/App.xaml
@@ -7,9 +7,21 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-                <!-- Other merged dictionaries here -->
+                 <!--Other merged dictionaries here-->
+                
             </ResourceDictionary.MergedDictionaries>
-            <!-- Other app resources here -->
+             <!--Other app resources here-->
+            <Color x:Key="SystemAccentColor">#107C10</Color>
+            <Color x:Key="SystemAccentColorLight1">#107C10</Color>
+            <Color x:Key="SystemAccentColorDark1">#107C10</Color>
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Light">
+                    <SolidColorBrush x:Key="ButtonBackground" Color="{ThemeResource SystemAccentColor}"/>
+                    <SolidColorBrush x:Key="ButtonBackgroundPointerOver" Color="{ThemeResource SystemAccentColorLight1}"/>
+                    <SolidColorBrush x:Key="ButtonBackgroundPressed" Color="{ThemeResource SystemAccentColorDark1}"/>
+                </ResourceDictionary>
+            </ResourceDictionary.ThemeDictionaries>
         </ResourceDictionary>
+        
     </Application.Resources>
 </Application>
