--- a/DakManagementSystemUI/MainWindow.xaml
+++ b/DakManagementSystemUI/MainWindow.xaml
@@ -5,10 +5,16 @@
     xmlns:local="using:DakManagementSystemUI"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    >
 
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
-        <Button x:Name="loginWithDSC"   Click="LoginWithDSC">Login With DSC</Button>
-    </StackPanel>
+    <Grid>
+        <!--<Border x:Name="AppTitleBar" Grid.Column="1" VerticalAlignment="Top" Grid.Row="0" Padding="0,4,0,4">
+            <TextBlock x:Name="AppTitle" Text="Dak Management System" VerticalAlignment="Center" Margin="0,0,0,0" />
+        </Border>-->
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="0">
+            <Button x:Name="myButton" Click="myButton_Click" HorizontalAlignment="Center" Margin="0,0,0,8" >Register with DSC</Button>
+            <Button x:Name="loginWithDSC"   Click="LoginWithDSC" HorizontalAlignment="Center">Login With DSC</Button>
+        </StackPanel>
+    </Grid>
 </Window>
